--- a/paga-web-astro/src/layouts/BaseLayout.astro
+++ b/paga-web-astro/src/layouts/BaseLayout.astro
@@ -10,7 +10,7 @@ import Footer from "../components/Footer.astro";
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SUSTENTA-LAPP / Nuestro trabajo</title>
-    <link rel="icon" type="image/png" href="/logo.png" />
+    <link rel="icon" type="image/png" href="/ciiemad.png" />
   </head>
   <body class="font-sans bg-white text-gray-900 leading-relaxed">
     <Header />
