--- a/paga-web-astro/src/components/Header.astro
+++ b/paga-web-astro/src/components/Header.astro
@@ -14,10 +14,26 @@ import MenuDropdown from './MenuDropdown.astro'
 
     <ul class="flex gap-6 text-sm font-medium text-gray-700">
       <MenuDropdown />
-      <li><a href="/nuestro-trabajo" class="hover:text-guinda">Nuestro trabajo</a></li>
-      <li><a href="/publicaciones" class="hover:text-guinda">Publicaciones</a></li>
-      <li><a href="/cobertura" class="hover:text-guinda">Cobertura</a></li>
-      <li><a href="/conocer-mas" class="hover:text-guinda">Conocer más</a></li>
+      <li>
+        <a href="/nuestro-trabajo" class="relative font-bold transition-colors duration-300 hover:text-yellow-600 after:absolute after:left-0 after:-bottom-1 after:w-full after:h-0.5 after:bg-yellow-500 after:scale-x-0 hover:after:scale-x-100 after:transition-transform after:duration-300">
+          Nuestro trabajo
+        </a>
+      </li>
+      <li>
+        <a href="/publicaciones" class="relative font-bold transition-colors duration-300 hover:text-blue-500 after:absolute after:left-0 after:-bottom-1 after:w-full after:h-0.5 after:bg-blue-600 after:scale-x-0 hover:after:scale-x-100 after:transition-transform after:duration-300">
+          Publicaciones
+        </a>
+      </li>
+      <li>
+        <a href="/cobertura" class="relative font-bold transition-colors duration-300 hover:text-green-700 after:absolute after:left-0 after:-bottom-1 after:w-full after:h-0.5 after:bg-green-600 after:scale-x-0 hover:after:scale-x-100 after:transition-transform after:duration-300">
+          Cobertura
+        </a>
+      </li>
+      <li>
+        <a href="/conocer-mas" class="relative font-bold transition-colors duration-300 hover:text-gray-600 after:absolute after:left-0 after:-bottom-1 after:w-full after:h-0.5 after:bg-gray-600 after:scale-x-0 hover:after:scale-x-100 after:transition-transform after:duration-300">
+          Conocer más
+        </a>
+      </li>
     </ul>
   </nav>
 </header>
