--- a/paga-web-astro/src/pages/publicaciones.astro
+++ b/paga-web-astro/src/pages/publicaciones.astro
@@ -2,19 +2,98 @@
 import Layout from '../layouts/BaseLayout.astro';
 
 const publicaciones = [
+  //ana laura
   {
     tipo: "ARTÍCULO",
-    anio: "2025",
-    titulo: "Indicadores de resiliencia urbana",
-    autores: "Dra. Gómez, Mtro. Hernández",
-    enlace: "#"
+    anio: "2024",
+    titulo: "Green Roof Systems within the Framework of a Circular Economy:  A Scoping Review. Recycling (2024), 9, 69.",
+    autores: "Cervantes-Nájera, A.L.; Martínez-Rodríguez, M.-C.; Campos-Villegas, L.E.; Bello-Yañez, X.V.; Brenneisen, S.",
+    enlace: "https://doi.org/10.3390/recycling9040069"
+  },
+  {
+    tipo: "PAPER",
+    anio: "2024",
+    titulo: "Bibliometric analysis of Life Cycle Assessment articles visible in Scopus and Web of Science",
+    autores: "Martínez-Rodríguez, M., Aponte-Gaona, S., & Cervantes-Nájera, A. (2024).",
+    enlace: "https://doi.org/10.35381/cm.v10i18.1236"
+  },
+  {
+    tipo: "PAPER",
+    anio: "2024",
+    titulo: "Integral Study of a Light Green Roof with Draining Organic Material in Gustavo A. Madero, Mexico City.",
+    autores: "Cervantes-Nájera, A.L., Martínez-Rodríguez, M.C., Campos-Villegas, L.E. ",
+    enlace: "https://doi.org/10.1007/978-3-030-98067-2_68-1"
+  },
+  {
+    tipo: "PAPER",
+    anio: "2023",
+    titulo: "La conexión de las personas con las áreas verdes urbanas. Una revisión de la literatura.",
+    autores: "Martínez-Rodríguez, M. C., & Cervantes-Nájera, A. L.",
+    enlace: "https://doi.org/10.15658/10.15658/INVESTIGIUMIRE.231401.05"
+  },
+  {
+    tipo: "PAPER",
+    anio: "2022",
+    titulo: "Evaluación de la calidad nutricional de los productos agrícolas caso: mercados de la Ciudad de México",
+    autores: "Martínez Rodríguez, M. C., Campos Villegas, L. E., Alvarado Cardona, M., & Cervantes Nájera, A. L.",
+    enlace: "https://doi.org/10.5154/r.rchsagt.2022.02.04"
+  },
+  {
+    tipo: "PAPER",
+    anio: "2021",
+    titulo: "Green spaces resume their importance in cities after the COVID-19 pandemicA case of study from Mexico City, in Environmental Resilience and Transformation in Times of COVID-19",
+    autores: "Martínez Rodríguez, M. C., Cervantes-Nájera, A. L., and Martínez M.V.",
+    enlace: "https://doi.org/10.1016/B978-0-323-85512-9.00024-3"
+  },
+  {
+    tipo: "PAPER",
+    anio: "2022",
+    titulo: "Indicadores de Carbono en la Industria Farmacéutica: Huella de Carbono vs Huella Ecológica.",
+    autores: "Martínez-Rodríguez, M.-C., Marcelino-Aranda, M., Cervantes-Nájera, A. L., & Castillo Noguera, G.",
+    enlace: "https://doi.org/10.21664/2238-8869.2022v11i1.p60-75"
   },
   {
     tipo: "PAPER",
     anio: "2025",
-    titulo: "Análisis de política energética en México",
-    autores: "Dr. Ruiz, Dra. Martínez",
-    enlace: "#"
+    titulo: " Innovación gubernamental: Políticas de conservación para las ecorregiones. Abordajes Teóricos, Impactos externos, políticas públicas y dinámica económica en el Desarrollo Regional ",
+    autores: "Martínez-Rodríguez, M.-C., Saseendran, P. & Cervantes-Nájera, A. L.",
+    enlace: "https://ru.iiec.unam.mx/4669/1/4-166-Martinez-Saseendran-Cervantes.pdf ISBN: 978-607-30-2640-6."
+  },
+  //Hector
+  {
+    tipo: "PAPER",
+    anio: "2024",
+    titulo: "Advancing Toward Sustainability: A Systematic Review Of Circular Economy Strategies In The Textile Industry.",
+    autores: "Héctor Guadalupe Ramírez-Escamilla, María Concepción Martínez-Rodríguez",
+    enlace: "https://doi.org/10.3390/recycling9050095"
+  },
+  {
+    tipo: "TESIS",
+    anio: "2025",
+    titulo: "Propuesta de un plan de manejo basado en una economía circular para residuos sólidos textiles preconsumo: Chiconcuac, Estado de México, México ",
+    autores: "Héctor Guadalupe Ramírez-Escamilla, María Concepción Martínez-Rodríguez.",
+    enlace: "enlace proximamente"
+  },
+  {
+    tipo: "CAPITULO 4 DEL LIBRO",
+    anio: "2024",
+    titulo: "Las Barreras De La Industria Textil Para Implementar La Economía Circular En México",
+    autores: "Héctor Guadalupe Ramírez-Escamilla, María Concepción Martínez-Rodríguez.",
+    enlace: "https://doi.org/10.52501/cc.170"
+  },
+  {
+    tipo: "CAPITULO 2 DEL LIBRO",
+    anio: "2024",
+    titulo: "El Papel De Las Escuelas Verdes En La Concientización Y Acción Contra El Cambio Climático En México",
+    autores: "Héctor Guadalupe Ramírez-Escamilla, María Concepción Martínez-Rodríguez.",
+    enlace: "https://doi.org/10.52501/cc.187"
+  },
+  {
+    tipo: "CAPITULO 9 DEL LIBRO",
+    anio: "2024",
+    titulo: "Economía Circular y Su Importancia En La Creación De Nuevos Empleos: Caso De Estudio México",
+    autores: "Héctor Guadalupe Ramírez-Escamilla, María Concepción Martínez-Rodríguez.",
+    enlace: "https://doi.org/10.52501/cc.187"
   }
 ];
 ---
