--- a/paga-web-astro/src/pages/sobre-nosotros.astro
+++ b/paga-web-astro/src/pages/sobre-nosotros.astro
@@ -31,13 +31,19 @@ const equipo = [
     especialidades: ['Cambio Climático', 'Sistemas Ambientales', 'Gestión de Calidad']
   },
   {
-    id: 'dra-martinez',
-    nombre: 'Dra. Ana Martínez',
-    titulo: 'Investigadora Senior',
-    foto: '/equipo/dra-martinez.jpg',
-    semblanza: 'Doctora en Políticas Públicas especializada en gobernanza territorial. Consultora internacional en temas de participación ciudadana y desarrollo local. Su trabajo se enfoca en la implementación de políticas públicas inclusivas y participativas.',
-    email: 'ana.martinez@ciiemad.ipn.mx',
-    especialidades: ['Gobernanza Territorial', 'Participación Ciudadana', 'Políticas Públicas']
+    id: 'diego-dominguez',
+    nombre: 'Diego Domínguez Solís',
+    titulo: 'Ingeniero Ambiental y Maestro en Ciencias en Estudios Ambientales y de la Sustentabilidad',
+    foto: '/equipo/diego_dominguez.png',
+    semblanza: 'Soy Ingeniero Ambiental y Maestro en Ciencias en Estudios Ambientales y de la Sustentabilidad por el Instituto'+
+    'proyectos de soluciones basadas en la naturaleza (SbN), como humedales artificiales y techos verdes. He'+
+    'contribuido en la elaboración de informes técnicos, publicaciones científicas y presentaciones en foros nacionales'+
+    'e internacionales. Mi formación incluye conocimientos en normatividad ambiental nacional e internacional,'+
+    'gestión de la calidad del agua, manejo de residuos y evaluación de impacto ambiental, además del uso de'+
+    'herramientas digitales (Excel, R, QGIS) para el análisis ambiental.'+
+    'Politécnico Nacional (IPN), con experiencia en investigación aplicada, redacción académica y monitoreo de',
+    email: 'diegossolis32@gmail.com',
+    especialidades: ['Soluciones Ambientales', 'Redacción Científica', 'Normatividad Ambiental']
   },
   {
     id: 'dra-lopez',
