--- a/paga-web-astro/src/pages/blog.astro
+++ b/paga-web-astro/src/pages/blog.astro
@@ -1,10 +1,13 @@
 ---
-import Layout from '../layouts/BaseLayout.astro';
+import Layout from "../layouts/BaseLayout.astro";
 ---
 
 <Layout>
-  <section class="max-w-4xl mx-auto my-16 text-center">
+  <section class="max-w-4xl mx-auto my-16 text-center font-sans">
     <h1 class="text-4xl font-serif text-guinda mb-6">Blog Académico</h1>
-    <p class="text-gray-700">Reflexiones, avances y artículos breves de nuestros investigadores. Muy pronto.</p>
+    <p class="text-gray-700 font-sans">
+      Reflexiones, avances y artículos breves de nuestros investigadores. Muy
+      pronto.
+    </p>
   </section>
 </Layout>
