--- a/paga-web-astro/src/pages/conocer-mas.astro
+++ b/paga-web-astro/src/pages/conocer-mas.astro
@@ -8,7 +8,7 @@ import Layout from '../layouts/BaseLayout.astro';
     <div class="max-w-3xl mx-auto flex flex-col items-center text-center">
       <img src="/podcast/logoST_PODCAST.png" alt="Logo Sustentaterra" class="w-50 h-48 mb-4 rounded-full shadow-lg border border-gray-200" loading="lazy"/>
       <h1 class="text-4xl font-serif text-guinda mb-2 font-bold tracking-tight">Podcast: Sustentaterra</h1>
-      <p class="text-lg text-gray-700 mb-4 font-medium italic font-bold">
+      <p class="text-lg text-gray-700 mb-4 font-medium italic">
         “La unión entre la sustentabilidad y la Tierra que habitamos.”
       </p>
     </div>
